# notebookmd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/commands/: publish.md
.claude/rules/: notebookmd-usage.md
.claude/skills/analyze/: SKILL.md  examples.md
.claude/skills/dashboard/: SKILL.md  examples.md
.claude/skills/notebookmd-guide/: SKILL.md
.claude/skills/report/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  quality.yml  release.yml
docs/: README.md  analytics-dashboard-proposal.md  api-reference.md  caching.md  cli.md  community-launch-plan.md  configuration.md  examples.md  generate_launch_plan.py  getting-started.md  index.md  plugins.md  widgets.md
examples/: README.md  analysis.py  streamlit_widgets.py
examples/basic/: README.md  run.py
examples/data-exploration/: README.md  run.py
examples/data-exploration/assets/: department_summary.csv  employees_full.csv
examples/financial-analysis/: README.md  run.py
examples/financial-analysis/assets/: aapl_prices.csv  aapl_weekly.csv  vcb_prices.csv  vcb_weekly.csv
examples/financial-analysis/data/: stock_prices.csv
examples/project-status/: README.md  run.py
examples/project-status/assets/: team_workload.csv
examples/project-status/data/: tasks.csv
examples/sales-dashboard/: README.md  run.py
examples/sales-dashboard/assets/: region_summary.csv  sales_full.csv  weekly_trends.csv
examples/sales-dashboard/data/: sales.csv
examples/widget-showcase/: README.md  run.py
examples/widget-showcase/assets/: sample_data.csv
notebookmd/: __init__.py  assets.py  cache.py  capture.py  cli.py  core.py  emitters.py  plugins.py  plugins_builtin.py  runner.py  widgets.py
notebookmd/plugins/: __init__.py  _base.py  _registry.py  analytics.py  charts.py  data.py  layout.py  media.py  status.py  text.py  utility.py
skills/notebookmd/: SKILL.md  examples.md  patterns.md  reference.md
tests/: conftest.py
tests/integration/: test_asset_integration.py  test_notebook_workflow.py  test_optional_deps.py
tests/samples/: test_examples.py
tests/unit/: test_assets.py  test_cache.py  test_capture.py  test_cli.py  test_core.py  test_emitters.py  test_plugins.py  test_runner.py
