[project]
name = "notebookmd"
version = "0.3.0"
description = "Streamlit-like API for AI agents to generate structured Markdown reports — enabling expert-level data analytics through programmatic notebook-style output"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Minh Luc Van" },
]
keywords = [
    "markdown",
    "notebook",
    "ai-agent",
    "data-analysis",
    "streamlit",
    "report-generator",
    "plugin",
    "extensible",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
notebookmd = "notebookmd.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=2.1.0", "tabulate>=0.9.0"]
plotting = ["matplotlib>=3.8.0"]
plotly = ["plotly>=5.18.0", "kaleido>=0.2.1"]
altair = ["altair>=5.2.0", "vl-convert-python>=1.1.0"]
pillow = ["Pillow>=10.0.0"]
watch = ["watchdog>=3.0.0"]
all = [
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "altair>=5.2.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/minhlucvan/notebookmd"
Repository = "https://github.com/minhlucvan/notebookmd"
Issues = "https://github.com/minhlucvan/notebookmd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebookmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "requires_pandas: Tests that require pandas to be installed",
    "requires_matplotlib: Tests that require matplotlib to be installed",
    "slow: Tests that take more than 1 second to run",
    "integration: Integration tests that test multiple components",
    "plugins: Tests for the plugin system",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
