[project]
name = "notebookmd"
version = "1.0.0"
description = "Streamlit-like API for AI agents to generate structured Markdown reports — enabling expert-level data analytics through programmatic notebook-style output"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Minh Luc Van" },
]
keywords = [
    "markdown",
    "notebook",
    "ai-agent",
    "data-analysis",
    "streamlit",
    "report-generator",
    "plugin",
    "extensible",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
notebookmd = "notebookmd.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=2.1.0", "tabulate>=0.9.0"]
plotting = ["matplotlib>=3.8.0"]
plotly = ["plotly>=5.18.0", "kaleido>=0.2.1"]
altair = ["altair>=5.2.0", "vl-convert-python>=1.1.0"]
pillow = ["Pillow>=10.0.0"]
watch = ["watchdog>=3.0.0"]
all = [
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "altair>=5.2.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
]
lint = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/minhlucvan/notebookmd"
Repository = "https://github.com/minhlucvan/notebookmd"
Documentation = "https://github.com/minhlucvan/notebookmd#readme"
Issues = "https://github.com/minhlucvan/notebookmd/issues"
Changelog = "https://github.com/minhlucvan/notebookmd/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebookmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "requires_pandas: Tests that require pandas to be installed",
    "requires_matplotlib: Tests that require matplotlib to be installed",
    "slow: Tests that take more than 1 second to run",
    "integration: Integration tests that test multiple components",
    "plugins: Tests for the plugin system",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary operator — readability preference
    "TCH003", # moving stdlib imports to TYPE_CHECKING — too noisy for this project
    "UP038",  # isinstance with union types — readability preference for tuple syntax
]
allowed-confusables = ["×", "ℹ", "–"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806", "E741", "F841", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["notebookmd"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["notebookmd"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
